manifest/objects/Channel_Rate_Value__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Rate__c</fullName>
        <label>Channel Rate</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel_Rate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enrollment_Percentage__c</fullName>
        <label>Enrollment Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Channel Rate Values</relationshipLabel>
        <relationshipName>Channel_Rate_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel Rate Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Channel_Rate__c</columns>
        <columns>Enrollment_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRV-{00000}</displayFormat>
        <label>Channel Rate Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Rate Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>